# dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py
backend/: .env  config.py  server.py
backend/app/: RSI.py  app.py  email_template_2.html  parsing_news.py  send_EMAIL.py  server.py  testMOEX.py
backend/app/authentication/: auth.py  token.py
backend/app/portfolio/: shares_operations.py
backend/app/portfolio_changes/: changes.py
backend/models/: database.py  models.py  schema.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/html/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: BuyCard.jsx  Deals.jsx  Dividends.jsx  Header.jsx  LoginForm.jsx  MarqueeStock.jsx  News.jsx  RegForm.jsx  SecCard.jsx  SecGraph.jsx  StocksListMain.jsx  Tops.jsx
frontend/src/pages/: About.jsx  Account.jsx  Auth.jsx  Home.jsx  News2.jsx  NewsPage.jsx  Registration.jsx  Securities.jsx  Security.jsx  StocksList.jsx  UserProfile.jsx
frontend/src/utils/: axios.jsx
frontend/static/styles/: style.css
migrations/: env.py
migrations/versions/: 15e842d64256_added_purchased_shares_and_balance.py  38cd507d8c33_added_balance_and_purchased_shares.py  4b8ce2ee55a4_check.py  4f84e6d21e95_balance.py  846d25b63cfa_balance.py  c6d5f6004879_check.py  d4c7a4171ed0_initial.py  d5e88a098bcd_check2.py  f813e9d8fff2_initial.py  f9e6ce70a994_float_bal.py  fd5ca667460a_initial.py
